--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           >menu</span
         > 
 
-        <img src="/images/icons8-youtube-36.png" alt=""><span class=" text-white font-bold text-xl">YouTube</span>
+        <img src="images/icons8-youtube-36.png" alt=""><span class=" text-white font-bold text-xl">YouTube</span>
         </div>
 <!-- search div -->
         <div class="hidden items-center md:flex  outline-none border-none sm:min-w-[200px] min-w-[300px] lg:min-w-[620px]">
@@ -84,7 +84,7 @@
           >notifications</span
         > 
     <div class="flex ">
-      <img  src="/images/ayodeji.jpg" alt="profile picture "class=" selecting rounded-full object-contain w-10 md:ml-2 cursor-pointer   border-transparent " >
+      <img  src="images/ayodeji.jpg" alt="profile picture "class=" selecting rounded-full object-contain w-10 md:ml-2 cursor-pointer   border-transparent " >
     </div>
         
           </div>
