--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           >menu</span
         > 
 
-        <img class="" src="/images/icons8-youtube-36.png" alt=""><span class=" text-white font-bold text-xl">YouTube</span>
+        <img class="" src="images/icons8-youtube-36.png" alt=""><span class=" text-white font-bold text-xl">YouTube</span>
         </div>
 <!-- search div -->
         <div class="hidden  items-center md:flex  outline-none border-none sm:min-w-[200px] min-w-[300px] lg:min-w-[620px]">
@@ -87,7 +87,7 @@
       class="material-symbols-outlined md:hidden hover:bg-zinc-700 ml-2 p-2 rounded-full relative cursor-pointer text-stone-300 rounded-full"
       >Search</span
     > 
-      <img  src="/images/ayodeji.jpg" alt="profile picture "class=" selecting rounded-full object-contain w-10 md:ml-2 cursor-pointer   border-transparent " >
+      <img  src="images/ayodeji.jpg" alt="profile picture "class=" selecting rounded-full object-contain w-10 md:ml-2 cursor-pointer   border-transparent " >
     </div>
         
           </div>
@@ -113,7 +113,7 @@
           </div>
 
           <div class="flex  ">
-            <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+            <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
           </div>
         </div>
       </div>
