--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 
         <!--  start of Main Page -->
 <!-- start of video section -->
-<div class="flex flex-wrap flex-1">
+<div class="flex flex-wrap">
   <!-- start of video div 1 -->
   <div class="bg-gray-100 py-4 sm:px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/3">
     <!-- div for video -->
