--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
@@ -579,7 +579,7 @@
       <div class="flex  w-full mx-auto ">
         <!-- image div -->
         <div class="pr-4">
-          <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+          <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
         </div>
   
         <!-- text div -->
@@ -626,7 +626,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
@@ -673,7 +673,7 @@
       <div class="flex  w-full mx-auto ">
         <!-- image div -->
         <div class="pr-4">
-          <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+          <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
         </div>
   
         <!-- text div -->
@@ -720,7 +720,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
@@ -767,7 +767,7 @@
       <div class="flex  w-full mx-auto ">
         <!-- image div -->
         <div class="pr-4">
-          <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+          <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
         </div>
   
         <!-- text div -->
@@ -814,7 +814,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
@@ -861,7 +861,7 @@
       <div class="flex  w-full mx-auto ">
         <!-- image div -->
         <div class="pr-4">
-          <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+          <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
         </div>
   
         <!-- text div -->
@@ -908,7 +908,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
@@ -955,7 +955,7 @@
       <div class="flex  w-full mx-auto ">
         <!-- image div -->
         <div class="pr-4">
-          <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+          <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
         </div>
   
         <!-- text div -->
@@ -1002,7 +1002,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
@@ -1049,7 +1049,7 @@
       <div class="flex  w-full mx-auto ">
         <!-- image div -->
         <div class="pr-4">
-          <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+          <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
         </div>
   
         <!-- text div -->
@@ -1096,7 +1096,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
