--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
@@ -580,7 +580,7 @@
       <div class="flex  w-full mx-auto ">
         <!-- image div -->
         <div class="pr-4">
-          <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+          <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
         </div>
   
         <!-- text div -->
@@ -627,7 +627,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
@@ -674,7 +674,7 @@
       <div class="flex  w-full mx-auto ">
         <!-- image div -->
         <div class="pr-4">
-          <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+          <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
         </div>
   
         <!-- text div -->
@@ -721,7 +721,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
@@ -768,7 +768,7 @@
       <div class="flex  w-full mx-auto ">
         <!-- image div -->
         <div class="pr-4">
-          <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+          <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
         </div>
   
         <!-- text div -->
@@ -815,7 +815,7 @@
     <div class="flex  w-full mx-auto ">
       <!-- image div -->
       <div class="pr-4">
-        <img  src="/images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
+        <img  src="images/ayodeji.jpg" alt="profile picture "class="selecting rounded-full object-contain w-10 ml-2 cursor-pointer   border-transparent " >
       </div>
 
       <!-- text div -->
